UI: Fix z-index

--- a/ui/src/scss/_components.scss
+++ b/ui/src/scss/_components.scss
@@ -21,7 +21,7 @@
     right: 0;
     box-shadow: var(--box-shadow-navbar);
     border-bottom: var(--card-border);
-    z-index: 20000;
+    z-index: 100000;
     height: var(--navbar-height);
     display: flex;
     align-items: center;
